2009-05-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed garbage "\" character before '
	* doc/aria2c.1.txt

2009-05-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed garbage "\" character before http.
	* doc/aria2c.1.txt

2009-05-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented additional options that can be specified in -i list.
	Documented --enable-xml-rpc, --xml-rpc-listen-port, --xml-rpc-user
	and --xml-rpc-passwd. Removed --enable-http-server and
	--http-server-listen-port.
	* doc/aria2c.1.txt

2009-05-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added "downloadSpeed" and uploadSpeed" key in getPeers response.	
	* src/DefaultPeerStorage.cc
	* src/DefaultPeerStorage.h
	* src/PeerStorage.h
	* src/XmlRpcMethodImpl.cc
	* test/MockPeerStorage.h

2009-05-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Put a call to Socket::isReadable() in try block.
	* src/HttpServerBodyCommand.cc
	* src/HttpServerCommand.cc

2009-05-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed segmentation fault error. SocketBuffer::sendResponse() may throw
	exception , so it is now in try block.
	* src/HttpServerResponseCommand.cc

2009-05-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added "amChoking" and "peerChoking" key in getPeers response.
	* src/XmlRpcMethodImpl.cc

2009-05-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added test case for zero-length filter.
	* test/BitfieldManTest.cc

2009-05-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	getFiles command now returns file data for finished/stopped
	downloads.	
	* src/XmlRpcMethodImpl.cc

2009-05-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	DownloadResult now has the list of FileEntry.  The download
	summary displays the path of first selected file and the number of
	remaining files for multi-file torrent.
	* src/DownloadResult.h
	* src/RequestGroup.cc