@@ -146,6 +146,11 @@ means unlimited\&. Default:
 \fI5\fR
 .RE
 .PP
+\fB\-n\fR, \fB\-\-no\-netrc\fR
+.RS 4
+Disables netrc support\&. netrc support is enabled by default\&.
+.RE
+.PP
 \fB\-\-no\-proxy\fR=DOMAINS
 .RS 4
 Specify comma separated hostnames or domains where proxy should not be used\&.
@@ -430,11 +435,6 @@ or
 .RS 4
 Reuse connection in FTP\&. Default:
 \fItrue\fR
-.RE
-.PP
-\fB\-n\fR, \fB\-\-no\-netrc\fR
-.RS 4
-Disables netrc support\&. netrc support is enabled by default\&.
 .RE
 .SS "BitTorrent/Metalink Options"
 .PP
