@@ -581,6 +581,14 @@ downloading a file like BitTorrent.</p></div>
 </p>
 </dd>
 <dt class="hdlist1">
+<strong>-n</strong>, <strong>--no-netrc</strong>
+</dt>
+<dd>
+<p>
+  Disables netrc support. netrc support is enabled by default.
+</p>
+</dd>
+<dt class="hdlist1">
 <strong>--no-proxy</strong>=DOMAINS
 </dt>
 <dd>
@@ -949,14 +957,6 @@ aria2c -o myfile.zip "http://mirror1/file.zip" "http://mirror2/file.zip"</td>
 <p>
   Reuse connection in FTP.
   Default: <em>true</em>
-</p>
-</dd>
-<dt class="hdlist1">
-<strong>-n</strong>, <strong>--no-netrc</strong>
-</dt>
-<dd>
-<p>
-  Disables netrc support. netrc support is enabled by default.
 </p>
 </dd>
 </dl></div>
@@ -2723,7 +2723,7 @@ files in the program, then also delete it here.</p></div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2009-05-13 01:42:14 JST
+Last updated 2009-05-13 21:29:04 JST
 </div>
 </div>
 </body>
